- Fixed bug where toggling between main images with different aspect ratios would cause the gallery to shift up or down

--- a/client/src/css/overview.css
+++ b/client/src/css/overview.css
@@ -11,11 +11,11 @@
 
 .overview-container {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr 8fr 4.5fr;
   grid-template-rows: minmax(80%, auto) auto;
   grid-template-areas:
-    "gallery details"
-    "description description";
+    "thumbnails image details"
+    "description description description";
   column-gap: 30px;
   place-items: stretch;
   place-content: stretch;
@@ -23,16 +23,9 @@
   margin-top: 20px;
 }
 
-.image-gallery {
-  grid-area: gallery;
-  overflow: hidden;
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: stretch;
-}
-
 .gallery-thumbnails {
-  max-width: 100px;
+  grid-area: thumbnails;
+  /* max-width: 100px; */
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
@@ -50,11 +43,6 @@
   align-items: center;
   row-gap: 20px;
   transition: all 400ms ease;
-}
-
-.main-image-pane {
-  /* background-color: #dddddd; */
-  position: relative;
 }
 
 .thumbnails-arrow {
@@ -89,12 +77,19 @@
   object-fit: contain;
 }
 
+.main-image-pane {
+  /* background-color: #dddddd; */
+  grid-area: image;
+  position: relative;
+}
+
 .main-image-arrow {
   position: absolute;
   top: 50%;
   padding: 7px 5px 5px;
   border-radius: 3px;
   background-color: #dddddd80;
+  z-index: 1;
 }
 
 .main-image-arrow:hover, .thumbnails-arrow:hover {
@@ -114,6 +109,10 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .product-details {
